<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.equipment.PredictEquipmentActivity">

    <!-- ScrollView to make content scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- ImageView to preview selected image, positioned at the top -->
            <ImageView
                android:id="@+id/imageView_preview"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <!-- Buttons for selecting image and opening camera (side by side) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/button_select_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_gallery"/>

                <Button
                    android:id="@+id/button_open_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_camera"
                    android:drawableLeft="@drawable/ic_camera" />
            </LinearLayout>

            <!-- RecyclerView to list equipment -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <!-- LinearLayout to make Next and Predict buttons side by side -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <!-- Next button, initially disabled -->
                <Button
                    android:id="@+id/button_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:enabled="false"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1" />

                <!-- Predict button -->
                <Button
                    android:id="@+id/button_predict"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/predict"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
