<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.cuaca.CuacaFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:text="@string/judul_cuaca"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Input City Label -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/city"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <!-- Text Input for City -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Weather Info Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <!-- Weather Icon -->
            <ImageView
                android:id="@+id/imageViewWeatherIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_cloud" />

            <!-- City -->
            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City: Jakarta"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />

            <!-- Weather Condition -->
            <TextView
                android:id="@+id/textViewWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weather: Scattered Clouds"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:layout_marginTop="5dp" />

            <!-- Temperature -->
            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temperature: 26.02°C"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:layout_marginTop="5dp" />

            <!-- Humidity -->
            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Humidity: 94%"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:layout_marginTop="5dp" />

            <!-- Wind Speed -->
            <TextView
                android:id="@+id/textViewWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wind Speed: 1.54 m/s"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Process Button -->
    <Button
        android:id="@+id/btnProcess"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/proces"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewResult" />

</androidx.constraintlayout.widget.ConstraintLayout>
