<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/coba"
    tools:context=".ui.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/imagehome2"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/nama_profile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="29dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView8"
                    app:layout_constraintVertical_bias="0.333"
                    app:srcCompat="@drawable/setting" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/title_home"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_health"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:background="@drawable/background_oval_2">

                                <ImageView
                                    android:id="@+id/image_health"
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/kesehatan2" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                            <TextView
                                android:id="@+id/text_health"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/health"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/blue"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_equipment"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:background="@drawable/background_oval_2">

                                <ImageView
                                    android:id="@+id/image_equipment"
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/perlengkapan2" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                            <TextView
                                android:id="@+id/text_equipment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/equipment"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/blue"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_fish"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="65dp"
                                android:layout_height="65dp"
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:background="@drawable/background_oval_2">

                                <ImageView
                                    android:id="@+id/image_fish"
                                    android:layout_width="55dp"
                                    android:layout_height="55dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ikan2" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/fish"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/blue"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/imageSlider"
                    android:layout_width="400dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/dotIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageSlider"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center">
            </LinearLayout>
                <!-- RecyclerView for Diving Spots -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="430dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/imageSlider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>